SERVER-92055 Don't reset ninserted within the same operation (#24594)

GitOrigin-RevId: b671696bbd774164e3d545e6b2f1a88ff8610ff8